--- a/MusicVideoApp/Base.lproj/Main.storyboard
+++ b/MusicVideoApp/Base.lproj/Main.storyboard
@@ -88,18 +88,18 @@
         <scene sceneID="ZlK-qJ-1mc">
             <objects>
                 <tableViewController id="ZGZ-2Y-uSO" customClass="SettingsVC" customModule="MusicVideoApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="1" id="bod-zp-q0k">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="30" id="bod-zp-q0k">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <sections>
                             <tableViewSection id="UMI-0y-NoY">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="oR4-Ty-HIZ">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="oR4-Ty-HIZ">
                                         <rect key="frame" x="0.0" y="64" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oR4-Ty-HIZ" id="USp-ED-bJv">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="567" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lTm-bP-lEL">
@@ -118,6 +118,9 @@
                                                 <constraint firstItem="lTm-bP-lEL" firstAttribute="leading" secondItem="USp-ED-bJv" secondAttribute="leadingMargin" constant="9" id="pcq-EI-urk"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="0ep-7i-gjE" kind="show" id="Orv-Fh-qia"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="jgM-c4-Vp5">
                                         <rect key="frame" x="0.0" y="108" width="600" height="44"/>
@@ -236,8 +239,11 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="KAb-p1-bl0">
+                                                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="10" maxValue="200" translatesAutoresizingMaskIntoConstraints="NO" id="KAb-p1-bl0">
                                                     <rect key="frame" x="46" y="7" width="509" height="31"/>
+                                                    <connections>
+                                                        <action selector="countValueChanged:" destination="ZGZ-2Y-uSO" eventType="valueChanged" id="ztS-b0-gvu"/>
+                                                    </connections>
                                                 </slider>
                                             </subviews>
                                             <constraints>
@@ -405,6 +411,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cJo-FE-AOm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2208" y="276"/>
+        </scene>
+        <!--AboutVC-->
+        <scene sceneID="lh8-Ff-eNf">
+            <objects>
+                <viewController id="0ep-7i-gjE" customClass="AboutVC" customModule="MusicVideoApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="agF-0V-mhE"/>
+                        <viewControllerLayoutGuide type="bottom" id="0wG-sM-BzD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="UOO-Xi-M8z">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Music Video App" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hMH-UV-L7d">
+                                <rect key="frame" x="235" y="122" width="130" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hMH-UV-L7d" firstAttribute="centerX" secondItem="UOO-Xi-M8z" secondAttribute="centerX" id="01v-eW-Pod"/>
+                            <constraint firstItem="hMH-UV-L7d" firstAttribute="top" secondItem="agF-0V-mhE" secondAttribute="bottom" constant="58" id="PaD-0b-C9r"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JuM-C4-KfO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2181" y="1057"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MqA-Mg-1la">
