--- a/MusicVideoApp/Base.lproj/Main.storyboard
+++ b/MusicVideoApp/Base.lproj/Main.storyboard
@@ -79,6 +79,12 @@
                         </barButtonItem>
                     </toolbarItems>
                     <navigationItem key="navigationItem" id="5rl-Ag-o7m"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="taj-iK-dhg">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="1VI-qB-eaf" eventType="valueChanged" id="dk5-yo-ngd"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uQe-Q5-o90" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -214,21 +220,31 @@
                                         <rect key="frame" x="0.0" y="240" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="n30-Zf-B36" id="QLY-g0-oaT">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of music videos " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fFc-Vq-2nb">
+                                                    <rect key="frame" x="18" y="11" width="191" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="200" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xqM-Oc-MoU">
-                                                    <rect key="frame" x="8" y="8" width="584" height="21"/>
+                                                    <rect key="frame" x="536" y="11" width="42" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="42" id="l8H-12-bSH"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="xqM-Oc-MoU" firstAttribute="trailing" secondItem="QLY-g0-oaT" secondAttribute="trailingMargin" id="IOl-Ih-naf"/>
-                                                <constraint firstItem="xqM-Oc-MoU" firstAttribute="top" secondItem="QLY-g0-oaT" secondAttribute="topMargin" id="QDu-Lw-ApE"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="xqM-Oc-MoU" secondAttribute="bottom" constant="6.5" id="YHj-TC-sTK"/>
-                                                <constraint firstItem="xqM-Oc-MoU" firstAttribute="leading" secondItem="QLY-g0-oaT" secondAttribute="leadingMargin" id="iEH-u0-fVQ"/>
+                                                <constraint firstItem="fFc-Vq-2nb" firstAttribute="leading" secondItem="QLY-g0-oaT" secondAttribute="leadingMargin" constant="10" id="8wN-jx-Foo"/>
+                                                <constraint firstItem="fFc-Vq-2nb" firstAttribute="bottom" secondItem="xqM-Oc-MoU" secondAttribute="bottom" id="ene-Oc-XrK"/>
+                                                <constraint firstItem="fFc-Vq-2nb" firstAttribute="centerY" secondItem="QLY-g0-oaT" secondAttribute="centerY" id="rdv-nn-7gB"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="xqM-Oc-MoU" secondAttribute="trailing" constant="14" id="wOp-nx-lhM"/>
+                                                <constraint firstItem="fFc-Vq-2nb" firstAttribute="top" secondItem="xqM-Oc-MoU" secondAttribute="top" id="xW9-5o-I8Z"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
